Tweaks to view and edit screen record sidebar: - fix to wrap the major sections on mobile - make sidebar go 2-column for mobile - reduce some padding in sidebar - improve wrapping & alignment of h5 + action button especially when the heading is long. - remove noWrap from site-level h3

--- a/src/qqq/styles/qqq-override-styles.css
+++ b/src/qqq/styles/qqq-override-styles.css
@@ -829,6 +829,14 @@ input[type="search"]::-webkit-search-results-decoration
    color: #0062FF !important;
 }
 
+@media (min-width: 768px)
+{
+   .recordSidebar
+   {
+      max-width: 250px !important;
+   }
+}
+
 @media (min-width: 1400px)
 {
    .recordSidebar
